--- a/css/basic.css
+++ b/css/basic.css
@@ -70,6 +70,10 @@ img {
 }
 
 body {
-    font-family: var(--font-family);
     margin: 0;
+    font-family: var(--font-family);
+    font-size: var(--font-size-2);
+    text-align: center;
+    color: var(--white);
+    background-color: var(--gray-900);
 }
