--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,82 @@
 @import './basic.css';
+
+.profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: var(--spacing-300);
+    margin: 10% auto;
+    gap: var(--spacing-300);
+    width: 327px;
+    border-radius: 12px;
+    background-color: var(--gray-800);
+}
+
+.profile_pic {
+    width: 88px;
+    border-radius: 999px;
+}
+
+.profile_head {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--spacing-50);
+}
+
+.profile_name {
+    font-size: var(--font-size-1);
+    font-weight: 600;
+    line-height: 2.25rem;
+}
+
+.profile_location {
+    font-weight: 700;
+    color: var(--green);
+}
+
+.socials_list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--spacing-200);
+    width: 100%;
+}
+
+.socials_item {
+    width: 100%;
+    height: 45px;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: var(--gray-700);
+}
+
+.socials_link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: var(--spacing-150);
+    font-weight: 700;
+    transition: color 500ms linear, background-color 500ms linear;
+}
+
+.socials_link:hover,
+.socials_link:focus {
+    color: var(--gray-700);
+    background-color: var(--green);
+}
+
+@media screen and (min-width: 768px) {
+    .profile {
+        padding: var(--spacing-500);
+        width: 456px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .profile {
+        width: 384px;
+    }
+}
